[package]
name = "badger-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
crc = "3.0.1"
futures = "0.3.28"
prost = "0.12.1"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["sync", "fs", "io-util", "macros", "rt-multi-thread"] }

[build-dependencies]
prost-build = "0.12.1"
