[package]
name = "badger-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
crc = "3.0.1"
crossbeam-epoch = "0.9.15"
crossbeam-skiplist = { version = "0.1.1", features = ["crossbeam-epoch"] }
flatbuffers = "23.5.26"
futures = "0.3.28"
integer-encoding = "4.0.0"
log = "0.4.20"
memmap2 = "0.9.0"
prost = "0.12.1"
rand = "0.8.5"
temp-dir = "0.1.11"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = [
    "sync",
    "fs",
    "io-util",
    "macros",
    "rt-multi-thread",
] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
env_logger = "0.10.0"
test-log = "0.2.13"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "fmt",
] }


[build-dependencies]
prost-build = "0.12.1"
